--- a/src/css/login_form.css
+++ b/src/css/login_form.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    height: 100%;
     width: 100%;
     max-width: 400px;
   }
