--- a/src/css/loginForm.css
+++ b/src/css/loginForm.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     background-color: antiquewhite;
-    height: 100%;
+    height: auto;
     padding: 30px 40px;
     border-radius: 10px;
     }
